# SEAAD_MERFISH

./: .gitignore  LICENSE  README.md  dummy_demog.csv  folds.json  plan_samplesheet_and_zscore.md  pyproject.toml  train.py  train_baseline.py  train_kernel.py
configs/: config.yaml  default_config.yaml  exp_001_reduce_overfit.yaml
data/: baseline_info.csv  braak_xy_expression_by_celltype_donor_lognorm_zscore.dvc  xy_expression_by_celltype_donor_lognorm_zscore.dvc
notes/: 01_preprocessing.md  02_data_access.md  03_dataset.md  compare_scheme_B.csv  compare_scheme_C.csv  plan_dataset.md
samplesheet/: samplesheet.csv
scripts/: 00_plot_sections.py  01_preprocessing.py  02_make_samplesheet.py  check_braak.py  check_class_balance.py  check_graphs.py  evaluate.py  explore_cps_braak.py  export_data.py  plot_sections.py
scripts/data/: section_counts.csv
utils/: __init__.py  callbacks.py  data_split.py  dataset.py  loss_functions.py  models.py  optimizers.py  schedulers.py  trainer.py
