[project]
name = "seaad-merfish"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.66.1",
    "dvc-gdrive>=3.0.1",
    "matplotlib>=3.10.8",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "scanpy>=1.12",
    "torch==2.8.0",
    "torch-geometric>=2.7.0",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.3",
]
